--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<hello name="{{ name }}"></hello>
+<hello class="test" name="{{ name }}"></hello>
 <p>
   Start editing to see some magic happen :)
 </p>
